syntax = "proto3";

package product;


option go_package = "productsvc/api/product/v1";

service ProductService {
  rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse);
  rpc GetProduct (GetProductRequest) returns (GetProductResponse);
  rpc GetAllProducts (GetAllProductsRequest) returns (GetAllProductsResponse);
  rpc UpdateProductQuantityAndSold (UpdateProductQuantityAndSoldRequest) returns (UpdateProductQuantityAndSoldResponse);
}

message CreateProductRequest {
  string product_name = 1;
  double price = 2;
  string description = 3;
  int32 quantity = 4;
  int32 sold = 5;
}

message CreateProductResponse {
  string product_id = 1;
}

message GetProductRequest {
  string product_id = 1;
}

message GetProductResponse {
  string product_id = 1;
  string product_name = 2;
  double price = 3;
  string description = 4;
  int32 quantity = 5;
  int32 sold = 6;
  string image_url = 7;
}

message GetAllProductsRequest {}

message GetAllProductsResponse {
  repeated Product products = 1;
}

message Product {
  string product_id = 1;
  string product_name = 2;
  double price = 3;
  string description = 4;
  int32 quantity = 5;
  int32 sold = 6;
  string image_url = 7;
}

message UpdateProductQuantityAndSoldRequest {
  string product_id = 1;
  int32 quantity = 2;
  int32 sold = 3;
}

message UpdateProductQuantityAndSoldResponse {
  string product_id = 1;
  int32 quantity = 2;
  int32 sold = 3;
}

